force-app/main/default/objects/Asf_Dynamic_Datatable_Child__mdt/Asf_Dynamic_Datatable_Child__mdt.object-meta.xml
<CustomObject>
    <label>Asf_Dynamic Datatable Child</label>
    <pluralLabel>Asf_Dynamic Datatable Childs</pluralLabel>
</CustomObject>