force-app/main/default/objects/Asf_Dynamic_Datatable_Child__mdt/fields/Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Api_Name__c</fullName>
    <label>Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>