force-app/main/default/objects/Asf_Dynamic_Datatable_Child__mdt/fields/Asf_Dynamic_Datatable_Parent__c.field-meta.xml
<CustomField>
    <fullName>Asf_Dynamic_Datatable_Parent__c</fullName>
    <label>Asf_Dynamic Datatable Parent</label>
    <referenceTo>Asf_Dynamic_Datatable_Parent__mdt</referenceTo>
    <relationshipLabel>Asf_Dynamic Datatable Childs</relationshipLabel>
    <relationshipName>Asf_Dynamic_Datatable_Childs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>