force-app/main/default/objects/Asf_Dynamic_Datatable_Child__mdt/fields/Type_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Type_Attributes__c</fullName>
    <inlineHelpText>Please add data in a proper JSON format (double quotes included)</inlineHelpText>
    <label>Type Attributes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>